// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-extra-details Renders \`alarm-column-value-extra-details\` with empty alarm 1`] = `
<div
  class="layout alarm-column-value-extra-details wrap"
>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
</div>
`;

exports[`alarm-column-value-extra-details Renders \`alarm-column-value-extra-details\` with full alarm (only children) 1`] = `
<div
  class="layout alarm-column-value-extra-details wrap"
>
  <extra-details-ack-stub
    ack="[object Object]"
  />
  <extra-details-last-comment-stub
    lastcomment="[object Object]"
  />
  <extra-details-ticket-stub
    limit="5"
    tickets="[object Object]"
  />
  <extra-details-canceled-stub
    canceled="[object Object]"
  />
  <extra-details-snooze-stub
    snooze="[object Object]"
  />
  <extra-details-pbehavior-stub
    pbehaviorinfo="[object Object]"
  />
  <!---->
  <extra-details-children-stub
    closed="1"
    opened="2"
    rule="[object Object]"
    total="3"
  />
</div>
`;

exports[`alarm-column-value-extra-details Renders \`alarm-column-value-extra-details\` with full alarm (only parent) 1`] = `
<div
  class="layout alarm-column-value-extra-details wrap"
>
  <extra-details-ack-stub
    ack="[object Object]"
  />
  <extra-details-last-comment-stub
    lastcomment="[object Object]"
  />
  <extra-details-ticket-stub
    limit="5"
    tickets="[object Object]"
  />
  <extra-details-canceled-stub
    canceled="[object Object]"
  />
  <extra-details-snooze-stub
    snooze="[object Object]"
  />
  <extra-details-pbehavior-stub
    pbehaviorinfo="[object Object]"
  />
  <!---->
  <!---->
</div>
`;
